OpenSearch cloud cover filter

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -542,6 +542,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f02659d6-2273-4baa-940c-dfe9ade298c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OpenSearch EO mathematical notation\n",
+    "# n1 equal to field = n1\n",
+    "# {n1,n2,…} equals to field=n1 OR field=n2 OR …\n",
+    "# [n1,n2] equal to n1 <= field <= n2\n",
+    "# [n1,n2[ equals to n1 <= field < n2\n",
+    "# ]n1,n2[ equals to n1 < field < n2\n",
+    "# ]n1,n2] equal to n1 < field  <= n2\n",
+    "# [n1 equals to n1<= field\n",
+    "# ]n1 equals to n1 < field\n",
+    "# n2] equals to field <= n2\n",
+    "# n2[ equals to field < n2\n",
+    "\n",
+    "results = client.search(params={\"{eo:cloudCover?}\": {\"value\": \"80[\"}})  # eo:cloudCover < 80\n",
+    "len(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e87caed2-5177-4196-b3e2-35faaf44fba8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = client.search(params={\"{eo:cloudCover?}\": {\"value\": \"]20\"}})  # eo:cloudCover > 20\n",
+    "len(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c19ceaa4-e7cf-4b90-9139-cedf782445a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ac5ea886-b414-4df2-a482-408854c938fc",
    "metadata": {},
    "outputs": [],
