Adding comments in the resource catalogue demo

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8219b827-fe6d-4a8d-9af2-6f8719dd65ea",
+   "metadata": {},
+   "source": [
+    "OWSLib is a Python package for client programming with Open Geospatial Consortium (OGC) web service (hence OWS) interface standards, and their related content models. In this demo we’ll work with the CSW, WMS and WCS interfaces."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "658ce66c-15e4-41cd-b61a-4e9ba53dcd55",
@@ -26,7 +34,16 @@
    "id": "a86c43c6-0b46-4c55-8baa-f1d0da46c2c6",
    "metadata": {},
    "source": [
-    "### System Catalogue"
+    "### System Catalogue Discovery"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c69f0c24-bf3f-4800-8346-f83d0df884d3",
+   "metadata": {},
+   "source": [
+    "In this part of the demo, the user will use the system level resource catalogue endpoint to discover data collections and datasets.\n",
+    "The csw class of OWSLib is instantiated and service metadata are shown."
    ]
   },
   {
@@ -36,7 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_endpoint = 'https://resource-catalogue.185.52.193.87.nip.io/'"
+    "system_endpoint = 'https://resource-catalogue.185.52.193.87.nip.io/'\n",
+    "#system_endpoint = 'https://resource-catalogue.demo.eoepca.org/'"
    ]
   },
   {
@@ -47,6 +65,14 @@
    "outputs": [],
    "source": [
     "csw = CatalogueServiceWeb(system_endpoint,timeout=30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d26a7509-45a1-47d4-b548-3bde10dc779a",
+   "metadata": {},
+   "source": [
+    "Service metadata shown here include identification type (from ISO-19115), CSW version and CSW operations supported"
    ]
   },
   {
@@ -80,14 +106,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b72c7f69-6d87-4933-8032-f0065fb95f87",
+   "cell_type": "markdown",
+   "id": "4f397c4f-f61d-4c41-a746-46039bd215fa",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "csw.getdomain('GetRecords.resultType')\n",
-    "csw.results"
+    "As well as catalogue queryables:"
    ]
   },
   {
@@ -101,13 +124,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff59b751-330f-47bf-8b86-c9ce5eae6801",
+   "metadata": {},
+   "source": [
+    "The user can make a GetRecords request to get all records of the catalogue, with a page limit of 10."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "30704881-178d-45de-aeb7-7482c4542770",
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.getrecords2(maxrecords=20)\n",
+    "csw.getrecords2(maxrecords=10)\n",
     "csw.results"
    ]
   },
@@ -120,6 +151,14 @@
    "source": [
     "for rec in csw.records:\n",
     "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aff279fc-a59f-465f-a2a0-afbc07ba916c",
+   "metadata": {},
+   "source": [
+    "If the user wants to discover data with usage of filters, an OGC Filter can be used. Here we demonstrate how to create bbox, time extent and cloud cover filters combined with operators like and/or"
    ]
   },
   {
@@ -181,6 +220,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "225432bc-0fd8-4f70-9e07-3344628827c1",
+   "metadata": {},
+   "source": [
+    "The filter is then applied to the GetRecords request and results are shown:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7c4c4ce0-7c42-4c0b-afac-7725ddbfa724",
@@ -189,6 +236,14 @@
    "source": [
     "csw.getrecords2(constraints=filter_list, outputschema='http://www.isotc211.org/2005/gmd')\n",
     "csw.results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb5a8f1e-6bfd-40c0-ae8f-615435db4a8b",
+   "metadata": {},
+   "source": [
+    "Another option is to perform a collection level search, using the ParentIdentifier queryable. Here only the Sentinel2 L1C datasets will be discovered."
    ]
   },
   {
@@ -210,6 +265,14 @@
    "source": [
     "csw.getrecords2(constraints=[collection_query], outputschema='http://www.isotc211.org/2005/gmd')\n",
     "csw.results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed060cbe-43fe-4cce-9fa4-ce6980110f18",
+   "metadata": {},
+   "source": [
+    "Or we can just search using the bbox filter"
    ]
   },
   {
@@ -235,6 +298,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45f979dd-55ac-4e3d-b38f-998ca1c1dab8",
+   "metadata": {},
+   "source": [
+    "Or we can perform a full text search (here the keyword Orthoimagery is used)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0a4ae3e0-1b5d-4092-bc02-5928ee89ed63",
@@ -253,6 +324,14 @@
    "source": [
     "csw.getrecords2(constraints=[anytext_query])\n",
     "csw.results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3502e0f0-bec4-43d9-9125-675fcbd55557",
+   "metadata": {},
+   "source": [
+    "Also, we can iterate through the catalogue search results by passing the startposition and maxrecords parameters to GetRecords request:"
    ]
   },
   {
@@ -282,6 +361,14 @@
     "print('Found {} records.\\n'.format(len(csw.records.keys())))\n",
     "for key, value in list(csw.records.items()):\n",
     "    print(f'identifier: {value.identifier}\\ntype: {value.type}\\ntitle: {value.title}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b6ad2dd-3350-4cb2-8b5f-73b36dd9d54f",
+   "metadata": {},
+   "source": [
+    "The user then selects a record identifier and asks the catalogue to fetch the full record. Here we demonstrate how to obtain properties like title, bbox, full xml and links from the metadata record."
    ]
   },
   {
@@ -337,6 +424,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b8a12c3b-d36c-4240-a1bf-200d443e2230",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"dataset bbox = (%s, %s, %s, %s)\" % (rec.bbox.miny, rec.bbox.minx, rec.bbox.maxy, rec.bbox.maxx))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d6698df-6e31-4f87-9c89-42ab664d70af",
+   "metadata": {},
+   "source": [
+    "Using the geolinks python library we can filter the links that are of a specific type (here WMS and WCS links to be used for visualization)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7ed31ca8-4434-45c1-bcf0-13d4e027c71d",
    "metadata": {},
    "outputs": [],
@@ -375,13 +480,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8a12c3b-d36c-4240-a1bf-200d443e2230",
+   "cell_type": "markdown",
+   "id": "09b1ff0a-db7a-422b-ba07-f4f4baf43084",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print(\"dataset bbox = (%s, %s, %s, %s)\" % (rec.bbox.miny, rec.bbox.minx, rec.bbox.maxy, rec.bbox.maxx))"
+    "Finally we demonstrate how to show the record footprint on a map, using the Folium python library:"
    ]
   },
   {
@@ -405,6 +508,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac29808f-02fe-4230-8a15-e87c3a38ab25",
+   "metadata": {},
+   "source": [
+    "In this part of the demo, the user will use the workspace resource catalogue endpoint to discover processing outputs and applications."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "553feac4-ffae-42dc-8006-fa0ca61bcd09",
@@ -413,7 +524,8 @@
    },
    "outputs": [],
    "source": [
-    "workspace_endpoint = 'https://resource-catalogue.user.185.52.193.87.nip.io'"
+    "workspace_endpoint = 'https://resource-catalogue.user.185.52.193.87.nip.io'\n",
+    "#workspace_endpoint = 'https://resource-catalogue.user.demo.eoepca.org'"
    ]
   },
   {
@@ -427,13 +539,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a4f99827-fa7b-41e8-b9a1-464f8027676f",
+   "metadata": {},
+   "source": [
+    "With a GetRecords request the user can see the number of total records in the workspace catalogue"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "908e7656-3368-4d45-ae4f-300cee38f745",
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.getrecords2(maxrecords=20)\n",
+    "csw.getrecords2(maxrecords=10)\n",
     "csw.results"
    ]
   },
@@ -446,6 +566,14 @@
    "source": [
     "for rec in csw.records:\n",
     "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "608bd426-e7e1-48d4-a173-56608b31d32e",
+   "metadata": {},
+   "source": [
+    "Then, using the identifiers, the user can parse the links to the output data and applications available (CWL)"
    ]
   },
   {
@@ -488,6 +616,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "25a86e86-6307-4882-8959-9cd4d49ba1e6",
+   "metadata": {},
+   "source": [
+    "In this part of the demo, the user will use the OpenSearch endpoint of the system resource catalogue to discover datasets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8ebe61ec-5afd-44ca-9a6e-977157ef3a25",
@@ -495,6 +631,14 @@
    "outputs": [],
    "source": [
     "endpoint='http://resource-catalogue.185.52.193.87.nip.io/?service=CSW&version=3.0.0&request=GetCapabilities&mode=opensearch'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f576e20e-34f2-4add-adb2-872e7ef44049",
+   "metadata": {},
+   "source": [
+    "The pyops python opensearch client is used."
    ]
   },
   {
@@ -518,6 +662,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "86fff97a-1ec6-4586-ba01-950695f36ed0",
+   "metadata": {},
+   "source": [
+    "and the number of results is shown (note that the page size is 10 by default)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "13b02fab-9bb1-4376-8a13-561a27506807",
@@ -529,6 +681,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "67ee6403-0a64-40a8-8ebc-03e8b8218a33",
+   "metadata": {},
+   "source": [
+    "The user can also include parameters in the search, like the parent identifier for collection level search"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d421e192-0c2b-44bb-8d39-c90200f01cd3",
@@ -537,6 +697,14 @@
    "source": [
     "results = client.search(params={\"{eo:parentIdentifier?}\": {\"value\": \"S2MSI2A\"}})\n",
     "len(results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7cf104c-a893-4f9d-8312-1a0d13b1f717",
+   "metadata": {},
+   "source": [
+    "The user can also use OpenSearch EO mathematical notation to filter based on other parameters"
    ]
   },
   {
@@ -558,19 +726,16 @@
     "# n2] equals to field <= n2\n",
     "# n2[ equals to field < n2\n",
     "\n",
-    "results = client.search(params={\"{eo:cloudCover?}\": {\"value\": \"80[\"}})  # eo:cloudCover < 80\n",
+    "results = client.search(params={\"{eo:cloudCover?}\": {\"value\": \"]20\"}})  # eo:cloudCover > 20\n",
     "len(results)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e87caed2-5177-4196-b3e2-35faaf44fba8",
+   "cell_type": "markdown",
+   "id": "47249390-cace-4f01-9dee-c9b10e2ed0fd",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "results = client.search(params={\"{eo:cloudCover?}\": {\"value\": \"]20\"}})  # eo:cloudCover > 20\n",
-    "len(results)"
+    "Then the user can access a specific record through a list (with a JSON representation):"
    ]
   },
   {
@@ -581,6 +746,14 @@
    "outputs": [],
    "source": [
     "results[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baccad08-f193-4379-90ba-0da0ce330f46",
+   "metadata": {},
+   "source": [
+    "Another posibility is to use the HTTP GET requests directly with a generic client like requests."
    ]
   },
   {
@@ -605,6 +778,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e061992-58e8-4d0e-8ac0-8bd55eed0cad",
+   "metadata": {},
+   "source": [
+    "Here, the user asks for the OpenSearch entrypoint template"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "23fc3f20-75fb-4acf-9ff3-b00df47ed234",
@@ -614,6 +795,14 @@
     "R = S.get(url=endpoint)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
     "print(bs.prettify())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86704c40-cd73-41d5-9a92-702b5f15faf0",
+   "metadata": {},
+   "source": [
+    "The a GetRecords request (in the context of OpenSearch) is performed"
    ]
   },
   {
@@ -627,6 +816,35 @@
     "R = S.get(url=url)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
     "print(bs.prettify())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c30ffe74-666a-43db-b6f3-d4ba4cf1f70b",
+   "metadata": {},
+   "source": [
+    "A collections search is also demonstrated, for Sentinel2 Level 2A results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a678982d-bee9-4a0f-9468-ed95a3bd3169",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url='https://resource-catalogue.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&eo:parentIdentifier=S2MSI2A'\n",
+    "R = S.get(url=url)\n",
+    "bs = BeautifulSoup(R.text, 'xml')\n",
+    "print(bs.prettify())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f970e9c-f032-4949-930d-93e90cf873e2",
+   "metadata": {},
+   "source": [
+    "A similar OpenSearch request is demonstrated for the workspace catalogue endpoint"
    ]
   },
   {
@@ -644,10 +862,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fb640c7-4a64-40e7-9d05-7af7dfb84543",
+   "id": "d80bb3df-88f9-469b-8e39-5dd8e90892b2",
    "metadata": {},
    "source": [
-    "## Federated Search"
+    "Finally, both system and workspace endpoints can be queried using a Federated Search query, where the user sends a request to the workspace catalogue which in turn sends a distributed search request to the system catalogue and aggregates the results for the user."
    ]
   },
   {
@@ -665,23 +883,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a86aaea4-8f47-4061-8817-68de1e126353",
+   "id": "18cebdc4-00de-445d-af13-f9001fe21839",
    "metadata": {},
    "source": [
-    "## Collections Search"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdaf542d-a7f3-46ec-af30-edd908fe3822",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url='https://resource-catalogue.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&eo:parentIdentifier=S2MSI2A'\n",
-    "R = S.get(url=url)\n",
-    "bs = BeautifulSoup(R.text, 'xml')\n",
-    "print(bs.prettify())"
+    "Please note in the above result that the total of records is a combination of the system and workspace catalogues."
    ]
   }
  ],
