Some more edits in resource catalogue notebook

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -13,7 +13,7 @@
    "id": "8219b827-fe6d-4a8d-9af2-6f8719dd65ea",
    "metadata": {},
    "source": [
-    "OWSLib is a Python package for client programming with Open Geospatial Consortium (OGC) web service (hence OWS) interface standards, and their related content models. In this demo we’ll work with the CSW, WMS and WCS interfaces."
+    "[OWSLib](https://geopython.github.io/OWSLib) is a Python package for client programming with Open Geospatial Consortium (OGC) web service (hence OWS) interface standards, and their related content models. In this demo we’ll work with the CSW, WMS and WCS interfaces."
    ]
   },
   {
@@ -24,8 +24,8 @@
    "outputs": [],
    "source": [
     "from owslib.csw import CatalogueServiceWeb\n",
-    "from geolinks import sniff_link\n",
     "from owslib.fes import And, Or, PropertyIsEqualTo, PropertyIsGreaterThanOrEqualTo, PropertyIsLessThanOrEqualTo, PropertyIsLike, BBox, SortBy, SortProperty\n",
+    "from geolinks import sniff_link\n",
     "import folium"
    ]
   },
@@ -43,7 +43,7 @@
    "metadata": {},
    "source": [
     "In this part of the demo, the user will use the system level resource catalogue endpoint to discover data collections and datasets.\n",
-    "The csw class of OWSLib is instantiated and service metadata are shown."
+    "The `owslib.csw` class of OWSLib is instantiated and service metadata are shown."
    ]
   },
   {
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw = CatalogueServiceWeb(system_endpoint,timeout=30)"
+    "csw = CatalogueServiceWeb(system_endpoint, timeout=30)"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "id": "d26a7509-45a1-47d4-b548-3bde10dc779a",
    "metadata": {},
    "source": [
-    "Service metadata shown here include identification type (from ISO-19115), CSW version and CSW operations supported"
+    "Service metadata shown here includes identification type (from ISO-19115), CSW version and supported operations"
    ]
   },
   {
@@ -158,7 +158,7 @@
    "id": "aff279fc-a59f-465f-a2a0-afbc07ba916c",
    "metadata": {},
    "source": [
-    "If the user wants to discover data with usage of filters, an OGC Filter can be used. Here we demonstrate how to create bbox, time extent and cloud cover filters combined with operators like and/or"
+    "If the user wishes to discover data with usage of filters, an OGC Filter can be used. Here we demonstrate how to create spatial (`bbox`), temporal (`time`), and attribute (`apiso:CloudCover`) filters combined with logical operators like and/or"
    ]
   },
   {
@@ -243,7 +243,7 @@
    "id": "fb5a8f1e-6bfd-40c0-ae8f-615435db4a8b",
    "metadata": {},
    "source": [
-    "Another option is to perform a collection level search, using the ParentIdentifier queryable. Here only the Sentinel2 L1C datasets will be discovered."
+    "Another option is to perform a collection level search, using the `apiso:parentIdentifier` queryable. Here only the Sentinel2 L1C datasets will be discovered."
    ]
   },
   {
@@ -331,7 +331,7 @@
    "id": "3502e0f0-bec4-43d9-9125-675fcbd55557",
    "metadata": {},
    "source": [
-    "Also, we can iterate through the catalogue search results by passing the startposition and maxrecords parameters to GetRecords request:"
+    "We can also iterate through the catalogue search results by passing the `startposition` and `maxrecords` parameters to GetRecords request:"
    ]
   },
   {
@@ -436,7 +436,7 @@
    "id": "2d6698df-6e31-4f87-9c89-42ab664d70af",
    "metadata": {},
    "source": [
-    "Using the geolinks python library we can filter the links that are of a specific type (here WMS and WCS links to be used for visualization)"
+    "Using the [geolinks](https://github.com/geopython/geolinks) Python library we can filter the links that are of a specific type (here WMS and WCS links to be used for visualization)"
    ]
   },
   {
@@ -484,7 +484,7 @@
    "id": "09b1ff0a-db7a-422b-ba07-f4f4baf43084",
    "metadata": {},
    "source": [
-    "Finally we demonstrate how to show the record footprint on a map, using the Folium python library:"
+    "Finally we demonstrate how to show the record footprint on a map, using the [Folium](https://github.com/python-visualization/folium) Python library:"
    ]
   },
   {
@@ -512,7 +512,7 @@
    "id": "ac29808f-02fe-4230-8a15-e87c3a38ab25",
    "metadata": {},
    "source": [
-    "In this part of the demo, the user will use the workspace resource catalogue endpoint to discover processing outputs and applications."
+    "In this part of the demo, the user will use the workspace resource catalogue endpoint to discover processing outputs and applications.  The workspace catalogue is local to the user, which also has federated access to the system catalogue."
    ]
   },
   {
@@ -573,7 +573,7 @@
    "id": "608bd426-e7e1-48d4-a173-56608b31d32e",
    "metadata": {},
    "source": [
-    "Then, using the identifiers, the user can parse the links to the output data and applications available (CWL)"
+    "Then, using the identifiers, the user can parse the links to the output data as well as any applications that are available ([Common Workflow Language [CWL]](https://www.commonwl.org))"
    ]
   },
   {
@@ -620,7 +620,7 @@
    "id": "25a86e86-6307-4882-8959-9cd4d49ba1e6",
    "metadata": {},
    "source": [
-    "In this part of the demo, the user will use the OpenSearch endpoint of the system resource catalogue to discover datasets."
+    "In this part of the demo, the user will use the OpenSearch capability of the system resource catalogue to discover datasets."
    ]
   },
   {
@@ -638,7 +638,7 @@
    "id": "f576e20e-34f2-4add-adb2-872e7ef44049",
    "metadata": {},
    "source": [
-    "The pyops python opensearch client is used."
+    "Here, the [pyops](https://github.com/devsf/pyops) Python OpenSearch client is used."
    ]
   },
   {
