Added Etna dataset in the Resource Catalogue notebook

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -168,7 +168,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbox_query = BBox([37.8, 23.4, 38.8, 24.5])"
+    "#bbox_query = BBox([37.8, 23.4, 38.8, 24.5])\n",
+    "bbox_query = BBox([37, 13.9, 37.9, 15.1])"
    ]
   },
   {
@@ -178,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "begin = PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_begin', literal='2021-04-01 00:00')"
+    "begin = PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_begin', literal='2021-04-02 00:00')"
    ]
   },
   {
@@ -188,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "end = PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_end', literal='2021-04-21 23:59')"
+    "end = PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_end', literal='2021-04-02 23:59')"
    ]
   },
   {
@@ -236,6 +237,17 @@
    "source": [
     "csw.getrecords2(constraints=filter_list, outputschema='http://www.isotc211.org/2005/gmd')\n",
     "csw.results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2230f3a0-3b9a-4b44-92ed-af31d8fc93d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for rec in csw.records:\n",
+    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].identification.identtype}\\ntitle: {csw.records[rec].identification.title}\\n')"
    ]
   },
   {
@@ -378,7 +390,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.getrecordbyid(id=['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE'])"
+    "#csw.getrecordbyid(id=['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE'])\n",
+    "csw.getrecordbyid(id=['S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'])"
    ]
   },
   {
@@ -388,7 +401,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rec = csw.records['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE']"
+    "#rec = csw.records['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE']\n",
+    "rec = csw.records['S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE']"
    ]
   },
   {
@@ -494,7 +508,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = folium.Map(location=[38, 24], zoom_start=6, tiles='OpenStreetMap')\n",
+    "m = folium.Map(location=[38, 20], zoom_start=6, tiles='OpenStreetMap')\n",
     "folium.Rectangle(bounds=[[float(rec.bbox.miny), float(rec.bbox.minx)], [float(rec.bbox.maxy), float(rec.bbox.maxx)]]).add_to(m)\n",
     "m"
    ]
@@ -855,6 +869,27 @@
    "outputs": [],
    "source": [
     "url='https://resource-catalogue.user.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record'\n",
+    "R = S.get(url=url)\n",
+    "bs = BeautifulSoup(R.text, 'xml')\n",
+    "print(bs.prettify())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d985ff8-57c1-4f0b-88bb-d57b6ebe5c31",
+   "metadata": {},
+   "source": [
+    "The user can get one record using the identifier through the OpenSearch EO API:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87b26ef7-3c6b-4bfe-a524-8516f04bc273",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url='https://resource-catalogue.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&recordids=S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'\n",
     "R = S.get(url=url)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
     "print(bs.prettify())"
