--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -34,10 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "israeli-static",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "State loaded from file: {'client_id': '7d8fe022-2fba-4caa-bab8-cef3d44e096a', 'client_secret': 'dd79617b-1f07-4ac1-b0e2-0c39566e113d'}\n",
+      "client_id: 7d8fe022-2fba-4caa-bab8-cef3d44e096a [REUSED]\n",
+      "Client state saved to file: state.json\n"
+     ]
+    }
+   ],
    "source": [
     "import utils.DemoClient as client\n",
     "import jwt\n",
@@ -67,17 +77,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "hungry-morris",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Request] GET => https://test.185.52.193.87.nip.io/.well-known/uma2-configuration\n",
+      "token_endpoint: https://test.185.52.193.87.nip.io/oxauth/restv1/token\n",
+      "[Request] POST => https://test.185.52.193.87.nip.io/oxauth/restv1/token\n"
+     ]
+    }
+   ],
    "source": [
     "#-------------------------------------------------------------------------------\n",
     "# Authenticate as user 'demoA' and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
-    "USER_NAME=\"demoA\"\n",
+    "USER_NAME=\"userA\"\n",
     "USER_PASSWORD=\"defaultPWD\"\n",
     "user_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)"
    ]
@@ -104,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ordered-heath",
    "metadata": {},
    "outputs": [],
@@ -122,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "considerable-timeline",
    "metadata": {},
    "outputs": [],
@@ -142,10 +162,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "widespread-investing",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADES WPS endpoint: http://ades.test.185.52.193.87.nip.io/userA/zoo\n",
+      "ADES API Processes endpoint: http://ades.test.185.52.193.87.nip.io/userA/wps3\n"
+     ]
+    }
+   ],
    "source": [
     "# ADES URLs\n",
     "ades_base_url = \"http://ades.\" + platform_domain\n",
@@ -154,7 +183,7 @@
     "\n",
     "# Init\n",
     "ades_access_token = None\n",
-    "app_name = \"s-expression-0_0_2\""
+    "app_name = \"nhi-0_0_3\""
    ]
   },
   {
@@ -169,12 +198,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "retired-corner",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Request] GET => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes\n",
+      "[Request] POST => https://test.185.52.193.87.nip.io/oxauth/restv1/token\n",
+      "[Request] GET => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes\n",
+      "[Process List] = 200 (OK)\n",
+      "Processes: ['GetStatus', 's-expression-0_0_2', 'DeployProcess', 'UndeployProcess']\n"
+     ]
+    }
+   ],
    "source": [
     "# API Processes - List Processes\n",
     "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
@@ -196,13 +237,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "chubby-queens",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Application details read from file: ../data/app-deploy-body-cwl.json\n",
+      "[Request] POST => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes\n",
+      "[Request] POST => https://test.185.52.193.87.nip.io/oxauth/restv1/token\n",
+      "[Request] POST => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes\n",
+      "[Deploy Response] = 201 (CREATED)\n"
+     ]
+    }
+   ],
    "source": [
     "# API Processes - Deploy Application\n",
-    "response, ades_access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-atom.json\", id_token=user_id_token, access_token=ades_access_token)"
+    "response, ades_access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-cwl.json\", id_token=user_id_token, access_token=ades_access_token)"
    ]
   },
   {
@@ -217,12 +270,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "received-attitude",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Request] GET => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes\n",
+      "[Request] POST => https://test.185.52.193.87.nip.io/oxauth/restv1/token\n",
+      "[Request] GET => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes\n",
+      "[Process List] = 200 (OK)\n",
+      "Processes: ['GetStatus', 'nhi-0_0_3', 's-expression-0_0_2', 'DeployProcess', 'UndeployProcess']\n"
+     ]
+    }
+   ],
    "source": [
     "# Check deploy - list processes again\n",
     "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
@@ -242,10 +307,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "cubic-census",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Request] GET => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes/nhi-0_0_3\n",
+      "[Request] POST => https://test.185.52.193.87.nip.io/oxauth/restv1/token\n",
+      "[Request] GET => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes/nhi-0_0_3\n",
+      "[App Details] = 200 (OK)\n",
+      "STATUS = 200 OK\n",
+      "HEADERS = {'Server': 'nginx/1.19.1', 'Date': 'Wed, 28 Apr 2021 13:39:25 GMT', 'Content-Type': 'application/json;charset=UTF-8', 'Transfer-Encoding': 'chunked', 'Vary': 'Accept-Encoding', 'X-Powered-By': 'ZOO@ZOO-Project', 'Content-Encoding': 'gzip'}\n",
+      "BODY = {\n",
+      "  \"process\": {\n",
+      "    \"id\": \"nhi-0_0_3\",\n",
+      "    \"title\": \"nhi\",\n",
+      "    \"abstract\": \"Normalized Hotspot Indices\",\n",
+      "    \"version\": \"0.0.3\",\n",
+      "    \"jobControlOptions\": [\n",
+      "      \"sync-execute\",\n",
+      "      \"async-execute\",\n",
+      "      \"dismiss\"\n",
+      "    ],\n",
+      "    \"outputTransmission\": [\n",
+      "      \"value\",\n",
+      "      \"reference\"\n",
+      "    ],\n",
+      "    \"links\": [\n",
+      "      {\n",
+      "        \"rel\": \"canonical\",\n",
+      "        \"type\": \"application/json\",\n",
+      "        \"title\": \"Execute End Point\",\n",
+      "        \"href\": \"/watchjob/processes/nhi-0_0_3/jobs/\"\n",
+      "      }\n",
+      "    ],\n",
+      "    \"inputs\": [\n",
+      "      {\n",
+      "        \"id\": \"input_reference\",\n",
+      "        \"title\": \"Input product reference\",\n",
+      "        \"abstract\": \"Input product reference\",\n",
+      "        \"minOccurs\": \"1\",\n",
+      "        \"maxOccurs\": \"999\",\n",
+      "        \"input\": {\n",
+      "          \"literalDataDomains\": [\n",
+      "            {\n",
+      "              \"dataType\": {\n",
+      "                \"name\": \"string\"\n",
+      "              },\n",
+      "              \"valueDefinition\": {\n",
+      "                \"anyValue\": true\n",
+      "              }\n",
+      "            }\n",
+      "          ]\n",
+      "        }\n",
+      "      },\n",
+      "      {\n",
+      "        \"id\": \"threshold\",\n",
+      "        \"title\": \"Threshold for hotspot detection\",\n",
+      "        \"abstract\": \"Threshold for hotspot detection\",\n",
+      "        \"minOccurs\": \"1\",\n",
+      "        \"maxOccurs\": \"1\",\n",
+      "        \"input\": {\n",
+      "          \"literalDataDomains\": [\n",
+      "            {\n",
+      "              \"dataType\": {\n",
+      "                \"name\": \"string\"\n",
+      "              },\n",
+      "              \"valueDefinition\": {\n",
+      "                \"anyValue\": true\n",
+      "              }\n",
+      "            }\n",
+      "          ]\n",
+      "        }\n",
+      "      },\n",
+      "      {\n",
+      "        \"id\": \"aoi\",\n",
+      "        \"title\": \"Area of interest in Well-known Text (WKT)\",\n",
+      "        \"abstract\": \"Area of interest in Well-known Text (WKT)\",\n",
+      "        \"minOccurs\": \"0\",\n",
+      "        \"maxOccurs\": \"1\",\n",
+      "        \"input\": {\n",
+      "          \"literalDataDomains\": [\n",
+      "            {\n",
+      "              \"dataType\": {\n",
+      "                \"name\": \"string\"\n",
+      "              },\n",
+      "              \"valueDefinition\": {\n",
+      "                \"anyValue\": true\n",
+      "              }\n",
+      "            }\n",
+      "          ]\n",
+      "        }\n",
+      "      }\n",
+      "    ],\n",
+      "    \"outputs\": [\n",
+      "      {\n",
+      "        \"id\": \"wf_outputs\",\n",
+      "        \"title\": \"wf_outputs\",\n",
+      "        \"output\": {\n",
+      "          \"formats\": [\n",
+      "            {\n",
+      "              \"default\": true,\n",
+      "              \"mimeType\": \"application/json\"\n",
+      "            }\n",
+      "          ]\n",
+      "        }\n",
+      "      }\n",
+      "    ]\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# API Processes - Get Application Details\n",
     "response, ades_access_token = demo.proc_get_app_details(ades_proc_url, app_name, id_token=user_id_token, access_token=ades_access_token)\n",
